shell: Fix icon alignment in the header

--- a/pkg/shell/shell.less
+++ b/pkg/shell/shell.less
@@ -305,7 +305,7 @@ html.index-page body {
 }
 
 .navbar-header .navbar-brand {
-    padding: 13px 0 13px 10px;
+    padding: 15px 0 15px 10px;
 }
 
 @media (max-width: 767px) {
@@ -471,15 +471,6 @@ thead.credential-lock.credential-locked > *:first-child {
 
 thead.credential-lock.credential-unlocked > *:last-child {
     display: table-row !important;
-}
-
-li.credential-lock {
-    span { padding-left: 1em; }
-}
-
-/* For now this is not clickable */
-li.credential-lock > a:first-child {
-    cursor: default;
 }
 
 
